# TrustIssues-

./: Architecture  CMakeLists.txt  README.md  trust_issues_readme.md
SRC/: Architecture
include/: FileHandler.h
src/: main.cpp
